Edited theory notebook

--- a/notebooks/theory.ipynb
+++ b/notebooks/theory.ipynb
@@ -53,7 +53,8 @@
     "\n",
     "\\begin{align}\n",
     "P_\\theta(f_1^n, a_1^n|e_0^m) &= \\prod_{j=1}^n P_\\theta(f_j, a_j|e_0^m) \\\\\n",
-    " &= \\prod_{j=1}^n P_\\theta(a_j|m) P_\\theta(f_j|e_{a_j})\n",
+    " &= \\prod_{j=1}^n P(a_j|m) P_\\theta(f_j|e_{a_j})\\\\\n",
+    " &= \\frac{1}{m+1} \\prod_{j=1}^n \\theta_{f|a_j}\n",
     "\\end{align}"
    ]
   },
